examples/tomcat/tomcat-deploy-secrets.yaml
# First create a secret:
# # kubectl create secret generic tomcat-users --from-file=./tomcat-users.xml
# # kubectl get secret tomcat-users -o json
#

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    run: tomcat
  name: tomcat-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tomcat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tomcat
    spec:
      containers:
      - image: docker.io/kalise/tommy:1.7
        imagePullPolicy: IfNotPresent
        name: tomcat
        volumeMounts:
        - name: secrets
          mountPath: /opt/tomcat/conf/users
          readOnly: true
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      volumes:
      - name: secrets
        secret:
          secretName: tomcat-users
      dnsPolicy: ClusterFirst
      restartPolicy: Always
