examples/tomcat/tomcat-deploy.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
  labels:
    run: tomcat
  name: tomcat-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tomcat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tomcat
    spec:
      containers:
      - image: docker.io/kalise/taas:1.7
        imagePullPolicy: Always
        name: tomcat
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
