examples/tomcat/tomcat-template.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: taas
  labels:
    run: tomcat
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8080
    nodePort: 31080
  selector:
    run: tomcat
  type: NodePort

---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
  labels:
    run: tomcat
  name: tomcat-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tomcat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tomcat
    spec:
      containers:
      - image: docker.io/kalise/taas:1.7
        imagePullPolicy: Always
        name: tomcat
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
